tests/ui/unsafe/extern-function-requires-unsafe-5844.stderr
error[E0133]: call to unsafe function `rand` is unsafe and requires unsafe function or block
  --> $DIR/extern-function-requires-unsafe-5844.rs:7:5
   |
LL |     aux_5844::rand();
   |     ^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
